0.25.0	UNRELEASED

 * Fix ``get_unstaged_changes()`` to correctly pass Blob objects to filter
   callbacks instead of raw bytes. This fixes crashes when using ``.gitattributes``
   files with filter callbacks like ``checkin_normalize``.
   (Jelmer Vernooĳ, #2010)

 * The ``ObjectID`` and ``Ref`` types are now newtypes, making it harder to
   accidentally pass the wrong type - as notified by mypy. Most of this is in
   lower-level code. (Jelmer Vernooĳ)

 * Implement support for ``core.sharedRepository`` configuration option.
   Repository files and directories now respect shared repository permissions
   for group-writable or world-writable repositories. Affects loose objects,
   pack files, pack indexes, index files, and other git metadata files.
   (Jelmer Vernooĳ, #1804)

 * Optimize status performance by using stat matching to skip reading
   and filtering unchanged files. This provides significant performance
   improvements for repositories with LFS filters, where filter operations can
   be very expensive. The optimization matches Git's behavior of using mtime
   and size comparisons to determine if files need processing.
   (Jelmer Vernooĳ, #1999)

 * Drop support for Python 3.9. (Jelmer Vernooĳ)

 * Add support for pack bitmap indexes for fast reachability queries.
   (Jelmer Vernooĳ, #1792)

 * Add support for ``git rerere`` (reuse recorded resolution) with CLI
   subcommands and porcelain functions. Supports ``rerere.enabled`` and
   ``rerere.autoupdate`` configuration. (Jelmer Vernooĳ, #1786)

 * Add support for ``git mailinfo`` command to extract patch information from
   email messages. Implements ``dulwich mailinfo`` CLI command,
   ``porcelain.mailinfo()``, and ``patch.mailinfo()`` with support for subject
   munging, -k/-b flags, --scissors, --encoding, and --message-id options.
   (Jelmer Vernooĳ, #1839)

 * Add support for column formatting. (Jelmer Vernooĳ, #1837)

 * Add ``dulwich diagnose`` command to display diagnostic information about